--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="keywords" content="CSS, HTML, oscilloscope, JavaScript, Vue.js, canvas">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="/css/style.css" rel="stylesheet">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <style>
       @font-face {
         font-family: 'Press Start 2P';
