--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       @font-face {
         font-family: 'Press Start 2P';
         font-style: normal;
+        font-display: swap;
         font-weight: 400;
         src: local(''),
           url('/fonts/press-start-2p-v14-latin-regular.woff2') format('woff2'),
