Minor stylesheets & components refactoring

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <style>
+      :root {
+        --small: 16px;
+        --medium: 18px;
+        --large: 24px;
+        --extra-large: 32px;
+      }
       @font-face {
         font-family: 'Press Start 2P';
         font-style: normal;
@@ -27,8 +33,9 @@
         background: linear-gradient(to right, black, rgb(0, 0, 50)),
           url("img/noise.svg");
         color: white;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        gap: var(--large);
+        grid-auto-rows: auto 1fr auto;
         font-family: 'Press Start 2P', normal;
         margin: 0;
         min-height: 100%;
@@ -42,7 +49,10 @@
     <script type="module" src="/src/main.ts"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <h1>Web Oscilloscope</h1>
+    </header>
+    <main id="app"></main>
     <footer>made by <a href="https://github.com/super16">super16</a></footer>
   </body>
 </html>
