Upgrade dependencies & migrate project to Vite 5

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
       body {
         background: linear-gradient(to right, black, rgb(0, 0, 50)),
-          url("img/noise.svg");
+          url("/img/noise.svg");
         color: white;
         display: grid;
         gap: var(--large);
