Fix accessibility color issue & add some oklch colors

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         --medium: 18px;
         --large: 24px;
         --extra-large: 32px;
+        --red: oklch(65% 0.29 27.5);
+        --red-fallback: red;
+        --violet: oklch(58% 0.28 300);
+        --violet-fallback: #9832ff;
       }
       @font-face {
         font-family: 'Press Start 2P';
